# advanced_bank_reconciliation

./: .gitignore  .releaserc  BUG_FIX_UNPAID_INVOICES_OVERRIDE.md  BULK_RECONCILIATION.md  CHANGELOG.md  CURRENCY_FIX_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SOLUTION_DOCUMENTATION.md  SOLUTION_REPORT.md  UNPAID_INVOICE_RECONCILIATION_GUIDE.md  bug_fixes_summary.md  frappe_ui_reconciliation_tool_refactor_spec.md  package.json  pyproject.toml  react_reconciliation_tool_refactor_spec.md  unpaid_invoice_reconciliation_findings.md
.github/workflows/: ci.yml  release.yml
advanced_bank_reconciliation/: hooks.py  modules.txt  patches.txt  setup.py
advanced_bank_reconciliation/advanced_bank_reconciliation/: test_validation.py
advanced_bank_reconciliation/api/: accounting_dimensions.py  bank_rec.py  cash_coding.py  create_voucher.py  matched.py  matching.py  permission.py  test_bank_rec.py
advanced_bank_reconciliation/fixtures/: custom_field.json
advanced_bank_reconciliation/patches/: v1_1_1_rename_party_name_to_other_party.py
advanced_bank_reconciliation/tests/: test_utils.py
advanced_bank_reconciliation/utils/: logger.py
advanced_bank_reconciliation/www/: bank-reconciliation.py
bank_rec/: index.html  package.json  tailwind.config.js  tsconfig.json  vite-helpers.ts  vite.config.js
bank_rec/src/: App.vue  env.d.ts  (+2 more)
dashboard/: package.json  tailwind.config.js  vite.config.ts
docs/: bank-rec-modern-ui-design.md  bank-rec-mvp-implementation-plan.md
frontend/: components.d.ts  package.json  tailwind.config.js  vite.config.js
(+102 files in other folders)
